--- a/css/style.css
+++ b/css/style.css
@@ -194,13 +194,14 @@ h1::after {
   padding: 37px 17px;
   /* margin-right: -8px; */
   margin-left: 19px;
+  overflow: hidden;
 }
 
 .selectedProduct__panel::after {
   content: '';
   position: absolute;
   bottom: 4px;
-  right: -350px;
+  right: -300px;
   background: url(../img/mark.svg) no-repeat;
   width: 100%;
   height: 201px;
